Fix bug -- wrong modal z-index

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -159,8 +159,8 @@ $transition-during:         0.25s;
 $zindex-popup:              5000;
 $zindex-popup-header:       6000;
 $zindex-popup-sidebar:      6000;
-$zindex-modal:              7000;
-$zindex-message:            8000;
+$zindex-modal:              7000; // 7000~9999 for modal
+$zindex-message:            10000;
 
 // Datetime
 // -------------------------
